updates to fix mongodb issues and improved swagger documentation
