# models/carModel.js
@@ -2,12 +2,12 @@ const mongoose = require("mongoose");
 let Schema = mongoose.Schema;
 
 let cars = new Schema({
-  Make: { type: String },
-  Model: { type: String },
-  Year: { type: Number },
+  make: { type: String },
+  model: { type: String },
+  year: { type: Number },
   VIN: { type: String },
-  Description: { type: String },
-  Image: [{ name: String, url: String }],
+  description: { type: String },
+  image: [{ name: String, url: String }],
 });
 
 module.exports = mongoose.model("cars", cars);
