# models/userModel.js
@@ -2,8 +2,8 @@ const mongoose = require("mongoose");
 let Schema = mongoose.Schema;
 
 let users = new Schema({
-  Email: { type: String },
-  Password: { type: String },
+  email: { type: String },
+  password: { type: String },
 });
 
 module.exports = mongoose.model("users", users);
